# simpleChat

./: README.md
cli/: Makefile.am  README  build.sh  cli  configure.ac  fun.cpp  fun.h  main.cpp  makefile  public.h
ser/: CMakeLists.txt  README  View.h  build.sh  control.cpp  control.h  exit.cpp  exit.h  get_list.cpp  get_list.h  login.cpp  login.h  main.cpp  mysql.cpp  mysql.h  pthread.cpp  pthread.h  register.cpp  register.h  ser  start.sh  talk_to_group.cpp  talk_to_group.h  talk_to_one.cpp  talk_to_one.h  tcpserver.cpp  tcpsever.h
